Standardize navigation & Refine project card UI (smaller grid, zoom hover)

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>LearnToBot Class - Projects</title>
     <link rel="stylesheet" href="kids-theme.css">
     <link rel="stylesheet" href="mobile.css">
+    <script src="analytics.js"></script> <!-- Analytics Telemetry -->
     <style>
         * {
             margin: 0;
@@ -433,7 +434,7 @@
             max-width: 1200px;
             margin: 0 auto;
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
             gap: 25px;
         }
 
@@ -1380,7 +1381,8 @@
                 <li><a href="/student-progress.html" class="navbar-link">Student Progress</a></li>
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
                 <li><a href="/leaderboard.html" class="navbar-link">Leaders</a></li>
-                <li><a href="/teacher.html" class="navbar-link">Teacher Panel</a></li>
+                <li><a href="/instructor-dashboard.html" class="navbar-link">Teacher Panel</a></li>
+                <li><a href="/instructor-dashboard.html?tab=analytics" class="navbar-link">Analytics</a></li>
                 <li><a href="/all-kids.html" class="navbar-link">All Kids</a></li>
             </ul>
 
