--- a/public/project.html
+++ b/public/project.html
@@ -7,6 +7,7 @@
     <title>LearnToBot Class - Project</title>
     <link rel="stylesheet" href="kids-theme.css">
     <link rel="stylesheet" href="mobile.css">
+    <script src="analytics.js"></script> <!-- Analytics Telemetry -->
     <style>
         * {
             margin: 0;
@@ -662,9 +663,11 @@
             <ul class="navbar-menu" id="mobileMenu">
                 <li><a href="/" class="navbar-link active">Projects</a></li>
                 <li><a href="/student-progress.html" class="navbar-link">Student Progress</a></li>
-                <li><a href="/teacher.html" class="navbar-link">Teacher Panel</a></li>
+                <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
+                <li><a href="/leaderboard.html" class="navbar-link">Leaders</a></li>
+                <li><a href="/instructor-dashboard.html" class="navbar-link">Teacher Panel</a></li>
+                <li><a href="/instructor-dashboard.html?tab=analytics" class="navbar-link">Analytics</a></li>
                 <li><a href="/all-kids.html" class="navbar-link">All Kids</a></li>
-                <li><a href="/test-page.html" class="navbar-link">Test Page</a></li>
             </ul>
 
             <div class="navbar-auth">
