--- a/public/all-kids.html
+++ b/public/all-kids.html
@@ -138,6 +138,7 @@
             font-weight: 800;
             background: linear-gradient(135deg, #FFF 0%, #9CA3AF 100%);
             -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
             margin-bottom: 10px;
         }
@@ -418,6 +419,7 @@
         // Initialize
         document.addEventListener('DOMContentLoaded', loadAllKids);
     </script>
+    <script src="mobile-nav.js"></script>
 </body>
 
 </html>
