--- a/public/index.html
+++ b/public/index.html
@@ -1381,7 +1381,7 @@
                 <li><a href="/student-progress.html" class="navbar-link">Student Progress</a></li>
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
                 <li><a href="/leaderboard.html" class="navbar-link">Leaders</a></li>
-                <li><a href="/instructor-dashboard.html" class="navbar-link">Teacher Panel</a></li>
+                <!-- Teacher Panel Link Removed -->
                 <li><a href="/instructor-dashboard.html?tab=analytics" class="navbar-link">Analytics</a></li>
                 <li><a href="/all-kids.html" class="navbar-link">All Kids</a></li>
             </ul>
